add get payment customer id by uid api spec
