# api/shop/internal/gen/types.gen.go
@@ -95,6 +95,12 @@ type CreateUserResponse struct {
 	UserId int64 `json:"user_id"`
 }
 
+// CustomerByUserID defines model for CustomerByUserID.
+type CustomerByUserID struct {
+	// Id 顧客ID
+	Id string `json:"id"`
+}
+
 // GetChargeHistoriesProducts 注文IDに紐づく商品のリスト
 type GetChargeHistoriesProducts struct {
 	// ProductId 商品ID
@@ -149,8 +155,8 @@ type Name struct {
 	LastNameRoman string `json:"last_name_roman"`
 }
 
-// Product defines model for Product.
-type Product struct {
+// ProductByID defines model for ProductByID.
+type ProductByID struct {
 	// CategoryId カテゴリID
 	CategoryId int32 `json:"category_id"`
 
